package org.uade.types;

public enum TipoOperacion {
    INGRESO,
    EXTRACCION
}